# dictionary-builder

./: .scalafmt.conf  Cargo.toml  README.md  Settings.toml  build.sbt  pom.xml
project/: Dependencies.scala  plugins.sbt
src/: main.rs  settings.rs
src/main/generated-source/org/edla/wikimediaschema/: CaseType.java  ContributorType.java  MediaWikiType.java  NamespaceType.java  NamespacesType.java  ObjectFactory.java  PageType.java  RevisionType.java  SiteInfoType.java  TextType.java  UploadType.java  package-info.java
src/main/java/org/edla/dico/construct/: Dico.java  DicoBuilder.java  DicoProperties.java  RunConstructor.java  Splitter.java
src/main/java/org/edla/tools/: Locator.java
src/main/java/org/edla/wikimediaschema/: CaseType.java  CommentType.java  ContributorType.java  DeletedFlagType.java  DiscussionThreadingInfo.java  LogItemType.java  LogParamsType.java  LogTextType.java  MediaWikiType.java  NamespaceType.java  NamespacesType.java  ObjectFactory.java  PageType.java  RedirectType.java  RevisionType.java  SiteInfoType.java  TextType.java  UploadType.java  package-info.java
src/main/java/org/edla/wikimediaschema/ori/: CaseType.java  ContributorType.java  MediaWikiType.java  NamespaceType.java  NamespacesType.java  ObjectFactory.java  PageType.java  RevisionType.java  SiteInfoType.java  TextType.java  UploadType.java  package-info.java
src/main/resources/: application.conf  export-0.9.xsd
src/main/resources/org/edla/dico/construct/: dico.properties
src/main/scala/org/edla/dico/: DicoBuilder.scala
(+1 files in other folders)
