[package]
name = "dictionary-builder"
version = "0.1.0"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
edition = "2018"

[dependencies]
config = "0.11.0"
log = "0.4"
env_logger = "0.9.0"
serde_derive = "1.0.136"
serde = "1.0.136"
unicode-segmentation = "1.9.0"
flate2 = "1.0.22"
bzip2 = "0.4.3"
parse_mediawiki_dump = "0.1.0"