[package]
name = "dictionary-builder"
version = "0.1.2"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
edition = "2024"

[dependencies]
config = "0.15.11"
log = "0.4.26"
env_logger = "0.11.7"
serde_derive = "1.0.219"
serde = "1.0.219"
unicode-segmentation = "1.12.0"
flate2 = "1.1.0"
bzip2 = "0.5.2"
parse_mediawiki_dump_reboot = "1.0.2"